# PCILeechFWGenerator

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  06_implementation.tcl  07_bitstream.tcl  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Containerfile  DEVELOPMENT.md  Gemfile  LICENSE.txt  MANIFEST.in  Makefile  PCILeechFWGenerator.code-workspace  README.md  SECURITY.md  TEST_SUITE_README.md  _config.yaml  _config.yml  build_all.tcl  build_vfio_constants.sh  cli.py  complete_vfio_binding.py  config.py  entrypoint.sh  fix_flake8.py  force_vfio_binds.sh  generate.py  get_version.py  install-sudo-wrapper.sh  install.sh  (+30 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  device_report.md
.github/workflows/: auto-version-update.yml  ci-tests.yml  ci.yml  consolidated-ci.yml  container-ci.yml  datadog.yml  e2e-testing.yml  jekyll-gh-pages.yml  performance.yml  pre-commit.yml  pysa.yml  release.yml  safety-checks.yml  security.yml  template-validation.yml  update-readme-status.yml
_site/: config-space-shadow.html  config-space-shadow.md  debug.txt  development.html  development.md  device-cloning.html  device-cloning.md  donor-info-template.html  donor-info-template.md  feed.xml  firmware-uniqueness.html  firmware-uniqueness.md  index.html  index.md  manual-donor-dump.html  manual-donor-dump.md  search.json  sitemap.html  sitemap.xml  supported-devices.html  template-architecture.html  template-architecture.md  tui-readme.html
_site/search/: index.html
boards/: pcileech_100t484_x1.yaml  pcileech_35t325_x4.yaml  pcileech_75t484_x1.yaml
cloudflare-workers/: README.md  datadog-config.js  deploy.sh  wrangler.toml
configs/: fallbacks.yaml
configs/devices/: NOTE.md  active_device_minimal.yaml  active_device_multi_source.yaml  audio_controller.yaml  generic.yaml  network_card.yaml
docs/: BEHAVIOR_PROFILING.md  BUILD_SYSTEM_ARCHITECTURE.md  CAPABILITY_PRUNING.md  CONFIG_SPACE_SHADOW.md  CROSS_PLATFORM_SUPPORT.md  DEVELOPMENT.md  INSTALLATION.md  INTEGRATED_FEATURES.md  MANUAL_DONOR_DUMP.md  MSIX_TABLE_REPLICATION.md  PIN_ASSIGNMENT_GUIDE.md  QUICK_START.md  RELEASE_NOTES_v2.0.0.md  RELEASE_PLAN.md  TEST_SUITE_README.md  TUI_COMPATIBILITY_INDICATORS.md  TUI_Design_Document.md  TUI_README.md  UNIFIED_ENTRYPOINT.md  ci-version-automation.md  conf.py  index.rst  readme.rst  security_enhancements.md  template-validation.md  template.md
examples/: pcileech_generation_example.py
pcileech/: bar_layout_pkg.svh  pcileech_header.svh  tlp_pkg.svh
pcileech/rtl/: bar_dispatcher.sv  region_data_buffer.sv  region_device_ctrl.sv  region_status.sv  tlp_frontend.sv  tlps128_bar_top.sv
pcileech_fw_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: analyze_imports.py  analyze_templates.py  build_container.sh  build_docs.sh  build_release.sh  bump_version.py  check_template_syntax.py  check_templates.sh  ci_safety_checks.sh  e2e_test_github_actions.py  generate_api_docs.py  generate_pypi_package.py  iommu_viewer.py  pre-commit-systemverilog-validation.sh  pypi_build.sh  release.py  run_performance.py  set_version.py  test_capability_pruning.py  test_package_build.py  test_template_security.py  test_version_update.py  update_changelog.py  update_readme_status.py  update_version.py  validate_constraints.py  validate_generation_patterns.py  validate_production_config.py  validate_project_systemverilog.py  validate_systemverilog_templates.py  validate_template_security.py  validate_template_security.sh  validate_template_syntax.py  validate_template_variables.py  windows_donor_dump.ps1
site/: CNAME  _Footer.md  _Header.md  _Sidebar.md  config-space-shadow.md  debug.txt  development.md  device-cloning.md  donor-info-template.md  dynamic-device-capabilities.md  firmware-uniqueness.md  index.md  manual-donor-dump.md  no-fallback-policy.md  search.json  search.md  sitemap.md  supported-devices.md  template-architecture.md  troubleshooting.md  tui-readme.md
src/: __init__.py  __version__.py  advanced_sv_error.py  advanced_sv_generator.py  advanced_sv_main.py  advanced_sv_perf.py  advanced_sv_power.py  behavior_profiler.py  board_config.py  build.py  build_cli.py  build_compat.py  build_helpers.py  build_original.py  config_space_manager.py  config_space_shadow.sv  config_space_shadow_enhanced_tb.sv  config_space_shadow_tb.sv  constants.py  device_config.py  donor_dump_manager.py  error_utils.py  exceptions.py  file_manager.py  flash_fpga.py  generate_cli.py  import_utils.py  log_config.py  manufacturing_variance.py  msix_capability.py  msix_table.sv  msix_table_enhanced_tb.sv  msix_table_tb.sv  option_rom_bar_window.sv  option_rom_manager.py  option_rom_spi_flash.sv  pci_capability.py  pcileech_core_discovery.py  pcileech_tlps128_bar_controller.sv  pcileech_tlps128_cfgspace_shadow.sv  (+15 more)
tests/: PCILEECH_PRODUCTION_TEST_SUMMARY.md  __init__.py  conftest.py  conftest_refactored.py  create_mock_sysfs.sh  integration_smoke.sh  run_pcileech_production_tests.py  run_pcileech_tests.py  run_sv_tests.py  run_tui_tests.py  run_unit_tests.py  test_active_device.py  test_advanced_sv.py  test_attribute_access.py  test_bar_content_generator.py  test_bar_size_conversion.py  test_basic_bar_controller_template.py  test_behavior_profiler.py  test_build.py  test_build_additions.py  test_build_context_strict.py  test_build_helpers.py  test_build_integration.py  test_build_validation_fix.py  test_capability_pruning.py  test_capability_pruning_enhanced.py  test_capability_pruning_integration.py  test_cli_build_wrapper.py  test_cli_device_prioritizer.py  test_coe_error_injection.py  test_config_manager_enhanced.py  test_config_space_extraction.py  test_config_space_integration.py  test_config_space_manager.py  test_config_space_manager_advanced.py  test_config_space_manager_robust.py  test_config_space_shadow.py  test_config_space_shadow.sv  test_config_space_shadow_enhanced.py  test_constants.py  (+122 more)
utils/: logging.py  shell.py
vivado-docker/: README.md
(+285 files in other folders)
